dist/1.0/bin/sample/retrieveUnpackaged/objects/Task_Behavior__c.object
<CustomObject>
    <fields>
        <fullName>Date_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_Mail_Workflow_Rule__c</fullName>
        <label>E-Mail Workflow Rule</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Update_Literal_Value__c</fullName>
        <description>This is to be used as the string representation of any field update.  My guess is that we try various ways of casting this (expect string first, then cast as integer, then date, then date time) rather than using separate fields for each data type.</description>
        <label>Field Update Literal Value</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Update_Source_Field__c</fullName>
        <label>Field Update Source Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Update_Source_Object__c</fullName>
        <label>Field Update Source Object</label>
        <picklist>
            <picklistValues>
                <fullName>Internal Service Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netex Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSP Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Pricing / ICB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This Task</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_Update_Target_Field__c</fullName>
        <inlineHelpText>This field is used in conjunction with Task Behaviors that are Field Updates.</inlineHelpText>
        <label>Field Update Target Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Update_Target_Object__c</fullName>
        <label>Field Update Target Object</label>
        <picklist>
            <picklistValues>
                <fullName>Internal Service Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netex Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSP Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Pricing / ICB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provisioning_Plan_Task__c</fullName>
        <label>Provisioning Plan Task</label>
        <referenceTo>Provisioning_Plan_Task__c</referenceTo>
        <relationshipLabel>Task Behaviors</relationshipLabel>
        <relationshipName>Task_Behaviors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>E-Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visualforce_Email_Template_ID__c</fullName>
        <label>Visualforce Email Template ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Task Behavior</label>
    <nameField>
        <displayFormat>TB-{000000}</displayFormat>
        <label>Task Behavior Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Behaviors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>